Added changes of image upload fixed subscription bugs
